Revision 127 	 2011-08-20 	 Fix for Django's bug regarding not being able to have more than one row with NULL in CharField with unique=True, blank=True, null=True 
Revision 126 	 2011-08-20 	 Adding college_email_id to search fileds 
Revision 125 	 2011-08-20 	 Bumping the number of uwsgi processes to 2 
Revision 124 	 2011-08-20 	 changing passwd in new accounts to use digits only. Easy for students to notedown the new password 
Revision 123 	 2011-08-20 	 Adding a unique digit after username if unique username is not found 
Revision 122 	 2011-08-20 	 changing reset_password to use digits only. Easy for students to notedown the new password 
Revision 121 	 2011-08-11 	 Never delete an account from Google Apps. Just rename it. 
Revision 120 	 2011-05-05 	 Enabling Django Compressor 
Revision 119 	 2011-05-04 	 Cleaning up fabfile 
Revision 118 	 2011-05-04 	 Setting EMAIL_BACKEND to locmem in test_settings 
Revision 117 	 2011-05-04 	 Updating fabfile to make nosetests pass 
Revision 116 	 2011-05-04 	 Fixing favicon url 
Revision 115 	 2011-05-04 	 Increasing uWSGI buffer size to 32768 to fix 'invalid request block size' error 
Revision 114 	 2011-05-04 	 Adding code to serve static files in dev 
Revision 113 	 2011-05-04 	 Fixing requirements file 
Revision 112 	 2011-05-04 	 Removing pysis_facgi.py 
Revision 111 	 2011-05-04 	 Major Rehaul : Using Nginx + uWSGI instead of Nginx + flup + FastCGI for deployment 
Revision 110 	 2011-05-04 	 Upgrading settings to Django 1.3 version. Primary diff : static and media 
Revision 109 	 2011-05-04 	 Renaming MEDIA_URL to STATIC_URL in templates as per Django 1.3 nomenclature 
Revision 108 	 2011-05-04 	 Adding manage.py 
Revision 107 	 2011-05-04 	 Renaming media to static as per Django 1.3 nomenclature 
Revision 106 	 2011-05-04 	 Updating requirements 
Revision 105 	 2011-03-04 	 Adding apache config 
Revision 104 	 2011-03-02 	 Adding email id to birthday reminders 